...
              );
            },
            error: (error, stackTrace) => Center(child: Text('Error')),
            loading: () => CircularProgressIndicator(),
          ),
      drawer: Drawer(
        key: ValueKey('profilePic'),
        child: Column(
          children: [
            Image.network(currentUser.user.profilePic),
            ListTile(
              title: Text(
                'Hello ${currentUser.user.name}',
...
                    Navigator.of(context).push(
                      MaterialPageRoute(builder: (context) => const Settings()),
                    ),
                  },
            ),
            ListTile(
              key: ValueKey('signOut'),
              title: Text('Sign Out'),
              onTap:
                  () => {
                    FirebaseAuth.instance.signOut(),
                    ref.read(userProvider.notifier).logOut(),
                  },
...
